fix: z-index was messing with pointer events and is now fixed

--- a/src/components/SectionBrowser/SectionBrowser.scss
+++ b/src/components/SectionBrowser/SectionBrowser.scss
@@ -15,13 +15,17 @@
         width: 100%;
         padding: 0.5em 0.5em;
         
-        background-color: gray;
+        background-color: $clr-white;
         color: black;
         
         a {
-            background-color: white;
+            background-color: $clr-white;
             padding: 0.5em 2em;
             border-radius: 10px;
+        }
+
+        a:hover {
+            background-color: $clr-gray;
         }
     }
 
