--- a/src/pages/PageHome/PageHomeStars.scss
+++ b/src/pages/PageHome/PageHomeStars.scss
@@ -43,7 +43,8 @@ $size-large: 4px;
     height: 100vh;
     width: 100vw;
 
-    z-index: -2;
+    z-index: 2;
+    pointer-events: none;
 }
 
 #stars-small {
